load page with inactive scrollbar: this prevents width jerk when refreshing search

--- a/demo-seed/app/app.css
+++ b/demo-seed/app/app.css
@@ -2,6 +2,7 @@
 
 body {
 	margin-top: 50px;
+	overflow-y: scroll;
 }
 
 .section-title, .navbar-brand {
